added mastodon rel

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,6 @@
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
         by
         <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
+        <a rel="me" href="https://infosec.exchange/@chaimtime">Mastodon</a>
     </p>
 </footer>
