--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -13,7 +13,7 @@
         </a>
     {% endif %}
     {% if site.mastodon %}
-        <a class="link" data-title="infosec.exchange/{{ site.mastodon }}" href="https://infosec.exchange/{{ site.mastodon }}" target="_blank"  rel="me">
+        <a class="link" data-title="infosec.exchange/{{ site.mastodon }}" href="https://infosec.exchange/@{{ site.mastodon }}" target="_blank"  rel="me">
             <i class="fab fa-mastodon"></i>
         </a>
     {% endif %}
