--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -7,6 +7,12 @@
         </a>
     {% endif %}
 
+    {% if site.podcast %}
+    <a class="link" data-title="{{ site.podcast }}" href="https://{{ site.podcast }}" target="_blank" rel="noopener">
+        <i class="fa-solid fa-microphone"></i>
+    </a>
+{% endif %}
+
     {% if site.twitter %}
         <a class="link" data-title="twitter.com/{{ site.twitter }}" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">
             <i class="fa-brands fa-twitter"></i>
